bases/apps/immich/immich-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  labels:
    app: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      # Prevent config interference
      enableServiceLinks: false
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v1.105.1
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
          args:
            - ./start-server.sh
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /server-info/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /server-info/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-data-nfs
