bases/apps/immich/microservices-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices
  labels:
    app: microservices
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: microservices
  template:
    metadata:
      labels:
        app: microservices
    spec:
      # Prevent config interference
      enableServiceLinks: false
      containers:
        - name: microservices
          image: ghcr.io/immich-app/immich-server:v1.106.4
          command:
            - "/bin/sh"
          args:
            - ./start-microservices.sh
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-data-nfs
