bases/apps/immich/ml-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-learning
  labels:
    app: machine-learning
  annotations:
    immich-redis.kustomize.si-infra.de/exclude: "true"
    immich-postgres.kustomize.si-infra.de/exclude: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: machine-learning
  template:
    metadata:
      labels:
        app: machine-learning
    spec:
      # Prevent config interference
      enableServiceLinks: false
      containers:
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.105.1
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          volumeMounts:
            - name: cache
              mountPath: /cache
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "2"
              memory: 3Gi
            requests:
              cpu: 500m
              memory: 500Mi
      volumes:
        - name: cache
          emptyDir:
            {}
