bases/apps/immich/ml-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  labels:
    app: machine-learning
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: machine-learning
